---
source: tests/parse.rs
description: "8 * + 4;\n\n45 - nil ) / false;\n"
expression: render_dcx()
---
error: unexpected `+` token in input
  --> err_binop_chains.lx@double_ops:1:5
  |
1 | 8 * + 4;
  |     ^ unexpected token here
  |
  = note: expected expression

error: unterminated statement
  --> err_binop_chains.lx@double_ops:3:10
  |
3 | 45 - nil ) / false;
  | -------- ^ statement should have been terminated here
  | |         
  | this statement
  |
  = note: expected `;`

error: unexpected `)` token in input
  --> err_binop_chains.lx@double_ops:3:10
  |
3 | 45 - nil ) / false;
  |          ^ unexpected token here
  |
  = note: expected statement
